--- a/NHL.Data/Enums/SeasonEnum.tt
+++ b/NHL.Data/Enums/SeasonEnum.tt
@@ -5,7 +5,7 @@
 <#@ import namespace="System.Collections.Generic" #>
 <#@ output extension=".cs" #>
 
-namespace NHL.Data.Model  
+namespace NHL.Data.Enums  
 {  
   public enum SeasonEnum: int
   {
